Fixed navbar and layout issues

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a:link, a:visited {
   h1 {
     color: white;
     font-family: 'Marcellus SC', serif;
-    font-size: 45px;
+    font-size: 5vh;
     text-shadow: 2px 2px 4px black;
   }
   h2 {
@@ -33,6 +33,7 @@ a:link, a:visited {
   background-color: #1d2226;
   padding-bottom: 20px; 
    border: none;
+   padding-top: 25px;
   }
   #content2{
   background-color: #1d2226; 
@@ -54,6 +55,8 @@ a:link, a:visited {
   padding-right: 50px;
   padding-left: 50px;
   border: none;
+  width: 100%;
+  height: auto;
   }
 
 .headerimg {
@@ -92,27 +95,32 @@ a:link, a:visited {
   .toph {
     text-shadow: 2px 2px 4px #000000;
     color: rgb(199, 210, 228);
-    font-size: 25px;
+    font-size: 3vh;
     font-family: 'Abel', cursive;
     border: black;
     width: 100%;
-     text-align: center;
-     padding: 0px;
+    height: auto;
+    text-align: center;
+    padding: 0px;
 }
 #name {
 margin-left: 20%;
 position: absolute;
 top: 10px;
+font-size: .85vw;
 padding-bottom: 25px;
+background-color: none;
+height: auto;
+width: 100%;
 }
 #thumbnail {
   height: 50vh;
   width: 50vh;
 }
 .list-group-item {
-  background-color: rgb(170, 191, 219);
+  background-color: rgb(80, 87, 95);
+  width: 250px;
 }
-
 
 /* ==============MEDIA QUERIES======================= */
 
